# Agentic-MedTagger

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEMO_SETUP.md  Dockerfile  README.md  demo_medtagger.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
config/: default.yaml  medtagger_config.py
scripts/: setup_db.py
src/agentic_medtagger/: __init__.py  cli.py  main.py
src/agentic_medtagger/annotators/: __init__.py  assertion_negation.py  dictionary.py  medtagger_ie.py  medtagger_ml.py  omop_umls_normalizer.py  section_detector.py
src/agentic_medtagger/core/: __init__.py  annotation.py  document.py  pipeline.py
src/agentic_medtagger/web/: __init__.py  app.py
tests/: conftest.py  test_core.py  test_medtagger_components.py
